Some notes on instabilities

--- a/content/notes/UWAA556/ch05-1.md
+++ b/content/notes/UWAA556/ch05-1.md
@@ -350,7 +350,26 @@ The collisional cross-section reduces with the electron temperature. High-temper
 
 Ohmic heating (\\( \eta J^2 \sim I^2 R \\)) is not an effective way to heat plasmas at high temperatures, since the resistivity drops off so quickly with temperature.
 
-Finally, note that \\( \nu_{ei} \sim \frac{1}{v^3} \\). So faster electrons have fewer collisions, and lower resistivity. The high-speed tail of \\( f(\vec v_e) \\) carries most of the current. This has an interesting consequence when an electric field is applied: A phenomenon known as electron runaway can occur. A few electrons which happen to be moving fast in the direction of \\( - \vec E \\) when the field is applied will have gained so much energy before encountering an ion that they can make only a glancing collision. This allows them to pick up more energy from the electric field and decrease their collision cross section even further. If \\( \vec E \\) is large enough, the cross section falls fast enough that the runaway electrons never make a large-angle collision. They form an accelerated electron beam population, detached from the main body of the distribution.
+### Runaway Electrons / Dreicer Field
+
+Note that \\( \nu_{ei} \sim \frac{1}{v^3} \\).
+
+{{< katex display >}}
+\nu_{ei} = \frac{n e^4}{16 \pi \epsilon_0 ^2 m^2 v^3}
+{{< /katex >}}
+
+So faster electrons have fewer collisions, and lower resistivity. The high-speed tail of \\( f(\vec v_e) \\) carries most of the current. This has an interesting consequence when an electric field is applied: A phenomenon known as electron runaway can occur. A few electrons which happen to be moving fast in the direction of \\( - \vec E \\) when the field is applied will have gained so much energy before encountering an ion that they can make only a glancing collision. This allows them to pick up more energy from the electric field and decrease their collision cross section even further. If \\( \vec E \\) is large enough, the cross section falls fast enough that the runaway electrons never make a large-angle collision. They form an accelerated electron beam population, detached from the main body of the distribution.
+
+We can estimate the maximum electric field \\( \vec E \\) that the plasma can sustain under steady-state, by combining the steady-state equation with resistivity equation.
+
+The Dreicer field is
+
+{{< katex display >}}
+E_D = \left( \frac{e}{\lambda_D ^2} \right) \ln \Lambda
+{{< /katex >}}
+
+However, in reality, plasmas can sustain \\( |E| \gg E_D \\). This suggests that the resistivity due to collisions, which decreases with \\( |v| \\) is supplemented by additional resistivity that has not been identified. This is "anomalous resistivity". Low-frequency waves (\\( \omega < \omega_c \\) could supply this additional resistivity.)
+
 
 ## Single Fluid MHD and Generalized Ohm's Law
 
@@ -463,3 +482,48 @@ Possible explanations:
 - Magnetic field errors, and asymmetries can cause electron transport without collisions
 - Asymmetric \\( \vec E \\) field can result in \\( \vec E \cross \vec B \\) drifts that can have components perpendicular to the wall
 - Oscillating electric fields from wave instabilities can result in random fluctuations, causing collisionless random-walk due to \\( \vec E \cross \vec B  \\) drifts.
+
+
+# Stability and Instability
+
+## What drives plasma waves?
+
+So far, we have largely considered homogeneous, uniform plasmas with small perturbations caused by external forcing. If a plasma is completely uniform and homogeneous, then there is no free energy and it must be in the highest entropy state (e.g. Maxwellian distribution). However, most lab/space plasmas might be in equilibrium but can be driven unstable if there is free energy available which leads to wave generation within the plasma. Stability decreases free energy and drives the system towards thermodynamic equilibrium.
+
+## Classification of Instabilities
+
+### Streaming Instabilities
+
+These are the majority of the instabilities we covered in this course. Ion acoustic instability and two-stream instability are both examples of streaming instabilities.
+
+- Beam/current driven
+- Relative drift energy (oscillation energy)
+
+### Rayleigh-Taylor instabilities
+
+This sort of instability is well-known in the area of fluid dynamics.
+
+- Density gradient present in the plasma
+- Non-electromagnetic, external force initiates the instability
+
+### Universal instabilities
+
+- Confined plasma always has plasma pressure that tends to expand the plasma
+- Expansion energy can drive waves
+
+### Kinetic instabilities
+
+- Anisotropic velocity distribution, temperature anisotropies, etc. can cause instability. Eg Weibel instability.
+
+## Two-stream Instability
+
+- Consider the problem from the ions' reference frame (stationary ions)
+- One or multiple electron beams/streams present (2-stream, bump-on-tail)
+- \\( \vec B = 0 \\)
+- If electron stream is a beam, \\( T = 0 \rightarrow p = 0 \\)
+
+Use perturbations in momentum equations, continuity and Poisson equations to get dispersion relation.
+
+From \\( D(\omega, k) = 0 \\) note that complex-pair solutions of \\( \omega \\) for some \\( k \\) always appear as conjugate pairs.
+
+One of the roots has \\( \omega_i > 0 \\), so instability. In this case, long-wavelength oscillations become unstable.
