Clean up notes on low-frequency dispersion relation

--- a/content/notes/UWAA556/ch04-1.md
+++ b/content/notes/UWAA556/ch04-1.md
@@ -206,18 +206,7 @@ c_s ^2 \equiv \frac{\gamma_e k_b T_e + \gamma_i k_b T_i}{m_e + m_i}
 v_A ^2 = \frac{B_0 ^2}{\mu_0 \rho_0} \qquad \rho_0 = \sum n_{0\alpha} m_\alpha
 {{< /katex >}}
 
-## Stringer Diagrams
-
-Stringer diagrams are useful for visualizing and identifying waves in different regions of \\( \omega - k \\) space. They have absicca \\( k c_s / \omega_{ci} \\) and ordinate \\( \omega/\omega_{ci} \\) with a log scale.
-
-In this format, waves traveling at a constant phase velocity appear as straight lines in the Stringer diagram.
-
-The key speeds are:
-
-- \\( c \\): the highest phase velocity we'll see
-- \\( c_e \\)
-
-### LFDR Waves, Dispersion Relation, and Transitions
+## LFDR Waves, Dispersion Relation, and Transitions
 
 
 
@@ -242,14 +231,14 @@ The remaining factor gives two roots:
 For \\( c_s / v_A \ll 1 \\), the approximate roots are:
 
 
-#### Magnetized ion sound wave
+### Magnetized ion sound wave
 
 {{< katex display >}}
 \omega ^2 = k^2 c_s ^2 \cos ^2 \theta
 {{< /katex >}}
 
 
-#### Magnetosonic / magnetoacoustic wave
+####Magnetosonic / magnetoacoustic wave
 
 {{< katex display >}}
 \omega ^2 = k^2 (v_A ^2 + c_s ^2 \sin ^2 \theta)
@@ -269,7 +258,15 @@ Recall from the cold plasma dispersion relation discussion, we defined \\( \alph
 k^2 = \omega ^2 (v_A ^2 + c_s ^2 \sin ^2 \theta)^{-1}
 {{< /katex >}}
 
-SOME MATH HERE
+{{< katex display >}}
+2 k \left. \pdv{k}{\theta} \right|_{\omega} = - \omega ^2 (v_A ^2 c_s ^2 \sin ^2 \theta)^{-2} c_s ^2 2 \sin \theta \cos \theta
+{{< /katex >}}
+{{< katex display >}}
+= - k ^2 \frac{(v_A ^2 + c_s ^2 \sin ^2 \theta) c_s ^2 \cos \theta \sin \theta}{(v_A ^2 c_s ^2 \sin ^2 \theta )^2}
+{{< /katex >}}
+{{< katex display >}}
+-\frac{1}{k} \left. \pdv{k}{\theta} \right|_\omega = \frac{\cos \theta \sin \theta}{v_A ^2 / c_s ^2 + \sin ^2 \theta} = \tan \alpha
+{{< /katex >}}
 
 simplifies to (for \\( \beta \equiv \theta + \alpha \\))
 
@@ -279,11 +276,15 @@ simplifies to (for \\( \beta \equiv \theta + \alpha \\))
 
 As the acoustic component increases, wave energy is routed away from the magnetic field.
 
-#### Ion Acoustic Waves
+### Ion Acoustic Waves
 
 From the electrostatic dispersion relation:
 
-BIG MATH HERE
+{{< katex display >}}
+1 + \frac{1}{k^2 \lambda_{Di}^2} + \frac{1}{k^2 \lambda_{De}^2} = \qquad \qquad \qquad \\
+\frac{1}{k^2 \lambda_{Di}^2 \left[ 1 - k^2 c_i ^2 \left( \frac{\sin ^2 \theta}{\omega ^2 - \omega_{ci}^2} + \frac{\cos ^2 \theta}{\omega ^2} \right) \right]} \\
++ \cancel{\frac{1}{k^2 \lambda_{De}^2 \left[1 - k^2 c_e ^2 \left( \frac{\sin ^2 \theta}{\omega ^2 - \omega_{ce}^2} + \frac{\cos ^2 \theta}{\omega ^2} \right) \right]}}{\omega / k \ll c_e}
+{{< /katex >}}
 
 At \\( \theta = 0 \\):
 
@@ -300,3 +301,14 @@ With some more simplification
 If \\( k \lambda_{De} \ll 1 \\), then \\( \omega \approx k c_s \\).
 
 If \\( k \lambda_{De} \gg 1 \\), then \\( \omega \approx k c_i \\)
+
+## Stringer Diagrams
+
+Stringer diagrams are useful for visualizing and identifying waves in different regions of \\( \omega - k \\) space. They have abscissa \\( k c_s / \omega_{ci} \\) and ordinate \\( \omega/\omega_{ci} \\) with a log scale.
+
+In this format, waves traveling at a constant phase velocity appear as straight lines in the Stringer diagram.
+
+The key speeds are:
+
+- \\( c \\): the highest phase velocity we'll see
+- \\( c_e \\)
