Update to newer hugo-book theme version

--- a/content/notes/griffiths/ch1-1.md
+++ b/content/notes/griffiths/ch1-1.md
@@ -80,11 +80,11 @@ If A and B are perpendicular, then \\( \vec{A} \cdot \vec{B} = 0 \\)
 #### Example 1.1
 
 {{< tabs "example1.1" >}}
-{{< tab "Q" >}}
+{{% tab "Q" %}}
 
-Let \\( \vec{C} = \vec{A} - \vec{B} \\) (Fig 1.7), and calculate the dot product of \\( \vec{C} \\) with itself.
+Let \\( \vec{C} = \vec{A} - \vec{B} \\), and calculate the dot product of \\( \vec{C} \\) with itself.
 
-{{< /tab >}}
+{{% /tab %}}
 {{< tab "A" >}}
 
 {{< katex display >}}
